--- a/.env
+++ b/.env
@@ -7,4 +7,5 @@ DATABASE = mongodb://127.0.0.1:27017/e-commerce
 DATABASE_TEST = mongodb+srv://test:test@demo.aoloa.mongodb.net/test?retryWrites=true&w=majority
 
 
-SECRET_KEY = "SHASHANK606"
+USER_SECRET_KEY = "SHASHANK606"
+ADMIN_SECRET_KEY = "SHASHANKADMIN"
