--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "mailgun-js": "^0.22.0",
     "mongoose": "^5.10.2",
     "morgan": "^1.10.0",
+    "react-stripe-checkout": "^2.6.3",
+    "stripe": "^12.2.0",
+    "uuid": "^9.0.0",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0"
   },
